# geometries_fis

./: CMakeLists.txt  README.md
python_src/: FFS_stack.npy  FFS_stack.npz  data.mat  data.npy  data.npz  pFIS_stack.npy  read_save_npy.py
src/: SwStXtd.cpp  SwStXtd.h  SwStXtd.hpp  bops_linear.h  cnpy.cpp  generate_data.cpp  generate_data.h  minkSum.cpp  pFIS_stack.npz  test_cgal.cpp  test_eigen.cpp  utils.cpp  utils.h
src/tests/: test_cnpy.cpp
